Corrected the sizing of the canvas element - no longer 0*0 on Firefox. Enabled playing with click events too. Should make testing easier. Removed scrollbars on browsers which for some reason included them even though they're not necessary anyway I don't know why you did that Firefox.

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -4,6 +4,7 @@
 html {
 	background: #ccc;
 	height: 100%;
+	overflow: hidden;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -19,6 +20,7 @@ html {
 		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		height: 100%;
 		margin: 0 auto;
+		overflow: hidden;
 		position: relative;
 		width: 100%;
 	}
